test/spec_vectors/memory_copy/fail/module_79.wat
(module (memory 1 1) (func (export "testfn") (memory.copy (f64.const 10) (f64.const 20) (i32.const 30))))